--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -29,6 +29,10 @@ html lang="ja"
         .navbar-collapse.collapse.navbar-responsive-collapse
           ul.nav.navbar-nav
           ul.nav.navbar-nav.navbar-right
+            - if user_signed_in?
+            - else
+              li = link_to "Sign up", new_user_registration_path, :class => 'navbar-link'
+              li = link_to "Login", new_user_session_path, :class => 'navbar-link'
 
     .container
       .row
