--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -30,6 +30,13 @@ html lang="ja"
           ul.nav.navbar-nav
           ul.nav.navbar-nav.navbar-right
             - if user_signed_in?
+              li.dropdown
+                a.dropdown-toggle data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"
+                  = current_user.email
+                  span.caret
+                ul.dropdown-menu
+                  li = link_to 'Edit profile', edit_user_registration_path
+                  li = link_to 'Logout', destroy_user_session_path, method: :delete
             - else
               li = link_to "Sign up", new_user_registration_path, :class => 'navbar-link'
               li = link_to "Login", new_user_session_path, :class => 'navbar-link'
