--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -35,11 +35,11 @@ html lang="ja"
                   = current_user.email
                   span.caret
                 ul.dropdown-menu
-                  li = link_to 'Edit profile', edit_user_registration_path
-                  li = link_to 'Logout', destroy_user_session_path, method: :delete
+                  li = link_to 'アカウント設定', edit_user_registration_path
+                  li = link_to 'ログアウト', destroy_user_session_path, method: :delete
             - else
-              li = link_to "Sign up", new_user_registration_path, :class => 'navbar-link'
-              li = link_to "Login", new_user_session_path, :class => 'navbar-link'
+              li = link_to "アカウント作成", new_user_registration_path, :class => 'navbar-link'
+              li = link_to "ログイン", new_user_session_path, :class => 'navbar-link'
 
     .container
       .row
