--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -32,7 +32,7 @@ html lang="ja"
             - if user_signed_in?
               li.dropdown
                 a.dropdown-toggle data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"
-                  = current_user.email
+                  = current_user.username
                   span.caret
                 ul.dropdown-menu
                   li = link_to 'アカウント設定', edit_user_registration_path
