--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -9,3 +9,20 @@ dl.dl-horizontal
   dd = @user.sign_in_count
   dt 最終ログイン日時
   dd = @user.last_sign_in_at.to_s(:db)
+
+h2 authors
+
+table
+  thead
+    tr
+      th name
+      th email
+      th
+  tbody
+    - @user.authors.each do |author|
+      tr
+        td = author.name
+        td = author.email
+        td = link_to "Delete", author, method: :delete, data: { confirm: "delete?", commit: "OK", cancel: "Candel"}
+
+= link_to "Add", new_user_author_path(@user)
