--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -1,5 +1,15 @@
 h1 = @user.username
 
+h2 パラメータ
+
+dl.dl-horizontal
+  dt Lv.
+  dd = @user.user_statistic.level
+  dt Exp.
+  dd = @user.user_statistic.exp
+
+h2 基本情報
+
 dl.dl-horizontal
   dt ユーザ名
   dd = @user.username
