ユーザ登録時に admin 権限を持つか設定できる

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,4 +14,19 @@
 
 @import "bootstrap-sprockets";
 @import "honoka";
-@import "devise_bootstrap_views"
+@import "devise_bootstrap_views";
+
+.form-control-for-admin-checkbox {
+    background-color: #fff;
+    background-image: none;
+    border: 1px solid #ccc;
+    border-radius: 2px;
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset;
+    color: #555555;
+    display: block;
+    font-size: 16px;
+    height: 37px;
+    line-height: 1.42857;
+    padding: 6px 12px;
+    transition: border-color 0.15s ease-in-out 0s, box-shadow 0.15s ease-in-out 0s;
+}
