--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -36,9 +36,10 @@ html lang="ja"
                   span.caret
                 ul.dropdown-menu
                   li = link_to 'アカウント設定', edit_user_registration_path
+                  - if current_user.admin?
+                    li = link_to "ユーザ作成", new_user_registration_path
                   li = link_to 'ログアウト', destroy_user_session_path, method: :delete
             - else
-              li = link_to "アカウント作成", new_user_registration_path, :class => 'navbar-link'
               li = link_to "ログイン", new_user_session_path, :class => 'navbar-link'
 
     .container
